<?xml version="1.0"?>
<package>
  <name>youbot_nav</name>
  <version>0.0.1</version>
  <description>Navigation Stack for KUKA Youbot platform</description>

  <maintainer email="texnoman@itmo.ru">Texno Man</maintainer>

  <license>GPLv3</license>

  <author email="texnoman@itmo.ru">Texno Man</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
